--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.0.0-beta.5.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "vue": "^2.5.13",
+    "vue-frame": "^1.0.5",
     "vue-loader": "^14.1.1",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
