--- a/api/package.json
+++ b/api/package.json
@@ -2,10 +2,24 @@
   "name": "faq_bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "rm -rf lib/ && `yarn bin`/babel index.js --out-dir ./lib",
+    "deploy": "yarn build && gcloud beta functions deploy faq_bot --entry-point handler --trigger-http --stage-bucket faq-bot-1 --memory=256MB",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0"
+  }
 }
+
+
